@@ -1,3 +1,4 @@
-- builds:
-  hwdata-0.311-1.fc26
-  weston@latest
+---
+builds:
+  - hwdata-0.311-1.fc26
+  - weston@latest
